<resources>
    <string name="app_name">PDA Notes</string>
    <string name="logo">logo</string>
    <string name="poseescuenta">No tienes cuenta aun?<i> </i></string>
    <string name="registrarbtn"><u>Registrar</u></string>
    <string name="hint_nombre">nombre</string>
    <string name="tituloRegistrar">Cree su cuenta</string>
    <string name="hint_correo_electronico">correo-electronico</string>
    <string name="hint_password">contraseña</string>
    <string name="tituloSincronizarCuenta">Sincronice su cuenta</string>
    <string name="inicioSesionbtn"><u>Iniciar Sesion</u></string>
    <string name="terminos_y_condiciones">Acepta nuestros <b>terminos y condiciones</b></string>
    <string name="terminos_y_condiciones1">Revisa nuestras politicas <b> </b></string>
    <string name="terminos_y_condiciones2"><u>aqui</u></string>
    <string name="espanol">Español</string>
    <string name="ingles">English</string>
    <string name="chino">中文</string>
    <string-array name="tipos_de_evento">
        <item>Medico</item>
        <item>Boda</item>
        <item>Compra</item>
        <item>Examen</item>
        <item>Fiesta</item>
        <item>Navidad</item>
        <item>Pascuas</item>
        <item></item>
    </string-array>
    <string-array name="compras">
        <item>Platano</item>
        <item>Pera</item>
        <item>Jamon</item>
        <item>Raton</item>
        <item>Teclado</item>
        <item>Ordenador</item>
        <item></item>
    </string-array>
    <string-array name="fuentes">
        <item>Del sistema</item>
        <item>dDenut</item>
        <item>Love Craft</item>
        <item>Minecraft</item>
        <item>Old London</item>
    </string-array>
    <string-array name="fondos">
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Cyan</item>
        <item>Azul</item>
        <item>Magenta</item>
        <item>Morado</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">\?</string>
    <string name="sobreLaAPP">
        <b>PDA Notes</b>\n
        Es una app la cual esta diseñada para poseer notas y puede servir a varios usuarios a la par.
        Para que las contraseñas sean mas seguras se hace uso de MD5 para poder tener la contraseña asegurada para cualquier
        tipo de problema informatico.\n\n

        <b>Notas</b>\n
        Las notas se encriptan en un un algoritmo de encriptacion el cual se le denomina AES con la contraseña real lo cual si la base de datos es robada tu informacion estaria ha salvo gracias ha este sistema.\n\n

        <b>Eventos</b>\n
        Tambien posee un apartado de eventos el cual permite crear varios eventos que almacenan la fecha y hora del mismo junto con otros datos para poder organizar tu dia a dia. Estos eventos se ordenan por la fecha.

    </string>
</resources>