<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoliticasDePrivacidad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloSeleccionarIdioma"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_margin="20sp"
                android:gravity="center"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/idiomas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButtonEspano"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/espanol" />

                <RadioButton
                    android:id="@+id/radioButtonIngles"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/ingles" />

                <RadioButton
                    android:id="@+id/radioButtonChino"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/chino" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TyCdUTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TyCdUInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/CdUTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/CdUInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/pTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/UaTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/UaInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/ctycTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ctycInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/cTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="TextView"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>